fix: fix modal iframe height issue where scrollbars are displayed incorrectly because wrong height definitions

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -629,8 +629,10 @@
 
 		.iframe_container {
 			padding-top: 17px;
+
 			>iframe {
-				height: calc(100vh - 68px);
+				// height: calc(100vh - 68px);
+				height: calc(100vh - 8rem);
 				width: 100%;
 				z-index: 1;
 				padding: 0px;
